New exception style and new DTO methods: load, listAll

--- a/core/error_docs/error.html
+++ b/core/error_docs/error.html
@@ -6,8 +6,9 @@
 			h1 { color: white; padding: 10px 10px; margin: 0; }
 			dl { background: #f5f5f5; padding: 5px; margin: 0 10px; border: 1px solid #333; }
 			dt { font-weight: bold; color: #333; }
-			dd { padding: 20px; background-color: #ffe; border: 1px solid #ddd; margin-bottom: 15px; margin-right: 10px;}
+			dd { padding: 20px; background-color: #ffe; border: 1px solid #ddd; margin: 5px 10px 15px 60px;}
 			dd, dl { -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; }
+			pre { overflow: auto; }
 		</style>
 	</head>
 	<body>
